{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 49,
  "lineage": "0baebf7e-5953-409a-f495-13182878e0c0",
  "resources": [
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:loadbalancer/app/wordpress-alb/f2a245406de5cc77",
            "arn_suffix": "app/wordpress-alb/f2a245406de5cc77",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-638404297.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:loadbalancer/app/wordpress-alb/f2a245406de5cc77",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0183efa536538b8c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a183684dda14a0f"
              },
              {
                "subnet_id": "subnet-0aac5fc6d7e449636"
              }
            ],
            "subnets": [
              "subnet-08a183684dda14a0f",
              "subnet-0aac5fc6d7e449636"
            ],
            "vpc_id": "vpc-08d2e228f1c4ac64a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:listener/app/wordpress-alb/f2a245406de5cc77/eb8e4b86e4ce3c8b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:targetgroup/wordpress-tg/d6fd87ac0332e132",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:listener/app/wordpress-alb/f2a245406de5cc77/eb8e4b86e4ce3c8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:loadbalancer/app/wordpress-alb/f2a245406de5cc77",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_lb.wordpress_alb",
            "module.alb_module.aws_lb_target_group.wordpress_tg",
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:targetgroup/wordpress-tg/d6fd87ac0332e132",
            "arn_suffix": "targetgroup/wordpress-tg/d6fd87ac0332e132",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:636887873883:targetgroup/wordpress-tg/d6fd87ac0332e132",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025b4b7b37b743227",
            "arn": "arn:aws:ec2:ap-south-1:636887873883:instance/i-00371b127f2db1032",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00371b127f2db1032",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033598eeee5972610",
            "private_dns": "ip-10-0-0-72.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-3-110-213-88.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.213.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0919e23d2079d2c18",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a183684dda14a0f",
            "tags": {
              "Name": "wordpress-bastion"
            },
            "tags_all": {
              "Name": "wordpress-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0183efa536538b8c2",
              "sg-056bdc413062dffbb",
              "sg-0605263e58a810739"
            ]
          },
          "dependencies": [
            "module.database_module.aws_db_instance.wordpress_db",
            "module.database_module.aws_db_subnet_group.private_group",
            "module.ec2_module.aws_key_pair.wordpress_key_private",
            "module.ec2_module.data.aws_ami.wordpress_ami",
            "module.ec2_module.data.template_file.user_data_lamb",
            "module.ec2_module.data.template_file.user_data_mount_efs",
            "module.ec2_module.data.template_file.user_data_rds",
            "module.ec2_module.data.template_file.user_data_wordpress",
            "module.efs_module.aws_efs_file_system.wordpress_efs",
            "module.security_group_module.aws_security_group.database_sg",
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.ssh_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:internet-gateway/igw-0cc5212bcbf5966d7",
            "id": "igw-0cc5212bcbf5966d7",
            "owner_id": "636887873883",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "wordpress_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eip1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd4923466f3848e8",
            "domain": "vpc",
            "id": "eipalloc-0bd4923466f3848e8",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-187-241.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.187.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-1"
            },
            "tags_all": {
              "Name": "ip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": "eip2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e08f4e9410cfad35",
            "domain": "vpc",
            "id": "eipalloc-0e08f4e9410cfad35",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-107-123.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.107.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-2"
            },
            "tags_all": {
              "Name": "ip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wordpress-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd4923466f3848e8",
            "association_id": "eipassoc-0579fe426b13f6004",
            "connectivity_type": "public",
            "id": "nat-0f0201c0c88814ed9",
            "network_interface_id": "eni-0f8cae41754503bfc",
            "private_ip": "10.0.0.213",
            "public_ip": "13.127.187.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08a183684dda14a0f",
            "tags": {
              "Name": "wordpress_ng-1"
            },
            "tags_all": {
              "Name": "wordpress_ng-1"
            }
          },
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "nat2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e08f4e9410cfad35",
            "association_id": "eipassoc-05109ab389916e049",
            "connectivity_type": "public",
            "id": "nat-0e4eb6918bc0cb938",
            "network_interface_id": "eni-0d55dea215af55b79",
            "private_ip": "10.0.1.248",
            "public_ip": "13.200.107.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aac5fc6d7e449636",
            "tags": {
              "Name": "wordpress_ng-2"
            },
            "tags_all": {
              "Name": "wordpress_ng-2"
            }
          },
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "data",
      "type": "aws_route_table",
      "name": "wordpress_default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:route-table/rtb-097f77352da2854ae",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0bea7df6a4148bade",
                "route_table_id": "rtb-097f77352da2854ae",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-097f77352da2854ae",
            "owner_id": "636887873883",
            "route_table_id": "rtb-097f77352da2854ae",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc5212bcbf5966d7",
            "id": "r-rtb-097f77352da2854ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097f77352da2854ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.wordpress_igw",
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0821e46e9b2474fa01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0201c0c88814ed9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0821e46e9b2474fa0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.nat_gateway_module.aws_nat_gateway.wordpress-nat",
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0127306a57f24582e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4eb6918bc0cb938",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0127306a57f24582e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.nat_gateway_module.aws_nat_gateway.wordpress-nat",
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_table_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:route-table/rtb-0821e46e9b2474fa0",
            "id": "rtb-0821e46e9b2474fa0",
            "owner_id": "636887873883",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress_private_rt-1"
            },
            "tags_all": {
              "Name": "wordpress_private_rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "private_table_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:route-table/rtb-0127306a57f24582e",
            "id": "rtb-0127306a57f24582e",
            "owner_id": "636887873883",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress_private_rt-1"
            },
            "tags_all": {
              "Name": "wordpress_private_rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0609c6a62deed0f9c",
            "route_table_id": "rtb-0821e46e9b2474fa0",
            "subnet_id": "subnet-042aa43a268ae88e0"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90f7dd2d9467b23",
            "route_table_id": "rtb-0821e46e9b2474fa0",
            "subnet_id": "subnet-058ea11e2544669e3"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8ebfa2b825662a",
            "route_table_id": "rtb-0127306a57f24582e",
            "subnet_id": "subnet-0016a40407e95af2c"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5375a89d114db83",
            "route_table_id": "rtb-0127306a57f24582e",
            "subnet_id": "subnet-001af78d906db0c02"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013ed18ee2e60fab6",
            "route_table_id": "rtb-097f77352da2854ae",
            "subnet_id": "subnet-08a183684dda14a0f"
          },
          "dependencies": [
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba0877baa6fe634c",
            "route_table_id": "rtb-097f77352da2854ae",
            "subnet_id": "subnet-0aac5fc6d7e449636"
          },
          "dependencies": [
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:security-group/sg-0d0f93630d1ce36f3",
            "description": "database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0f93630d1ce36f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0605263e58a810739"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0605263e58a810739"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:security-group/sg-0dbb08688e8decd09",
            "description": "elastic file system security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbb08688e8decd09",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0605263e58a810739"
                ],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0605263e58a810739"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:security-group/sg-0183efa536538b8c2",
            "description": "public facing load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0183efa536538b8c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:security-group/sg-056bdc413062dffbb",
            "description": "SSH security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056bdc413062dffbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:security-group/sg-0605263e58a810739",
            "description": "web server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0605263e58a810739",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0183efa536538b8c2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0183efa536538b8c2"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0183efa536538b8c2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wordpress_subnet_private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-042aa43a268ae88e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042aa43a268ae88e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-1"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-1"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-0016a40407e95af2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016a40407e95af2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-2"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-2"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-058ea11e2544669e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ea11e2544669e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-3"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-3"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-001af78d906db0c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001af78d906db0c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-4"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-4"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-08a183684dda14a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a183684dda14a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_public-1"
            },
            "tags_all": {
              "Name": "wordpress_subnet_public-1"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:subnet/subnet-0aac5fc6d7e449636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac5fc6d7e449636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_public-2"
            },
            "tags_all": {
              "Name": "wordpress_subnet_public-2"
            },
            "vpc_id": "vpc-08d2e228f1c4ac64a"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wordpress_vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:636887873883:vpc/vpc-08d2e228f1c4ac64a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022686d155dcb0b03",
            "default_route_table_id": "rtb-097f77352da2854ae",
            "default_security_group_id": "sg-03ebf6b81663d310f",
            "dhcp_options_id": "dopt-01643d854fb9e5942",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d2e228f1c4ac64a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097f77352da2854ae",
            "owner_id": "636887873883",
            "tags": {
              "Name": "wordpress_vpc"
            },
            "tags_all": {
              "Name": "wordpress_vpc"
            }
          }
        }
      ]
    }
  ]
}